@@ -1,3 +1,8 @@
+        * make sure mogdbsetup doesn't upgrade an existing table (with
+          potentially lot of data) from MyISAM to InnoDB.  just warn.
+          only new tables should become InnoDB on creation.  also,
+          detect InnoDB even on old MySQL 4.0.x, not just 4.1/5.0.
+
         * make fsck faster (though more fastness remains to be done)
 
         * make fsck_status faster (keep summary stats of evcode counts,
